[package]
name = "wa-proto"
version = "0.1.0"
authors = ["Rail Khusnutdinov <mail@rail-ka.ru>"]
description = "(de)serialization protocol for webassembly engines"
keywords = ["webassembly", "wasm", "wasi", "serialization", "protocol"]
categories = ["encoding", "no-std", "wasm"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/libfunc/wa-proto/"
documentation = "https://docs.rs/wa-proto/"
repository = "https://github.com/libfunc/wa-proto/"
readme = "README.md"
edition = "2018"

[features]
default = ["std"]
std = [
    "serde",
    "bincode",
    "map",
    "chrono",
    "chrono/alloc",
    "chrono/std",
    "chrono/clock",
    "chrono/serde",
    "time",
    "time/std",
    "time/serde",
]
hashmap = ["hashbrown"]
map = ["rustc-hash"]
no_std = ["hashbrown"] # rustc-hash optional for no_std

[dependencies]
serde = { version = "1.0", optional = true, features = ["derive"] }
hashbrown = { version = "0.11", optional = true }
rustc-hash = { version = "1.1", optional = true, default-features = false }
bincode = { version = "1.3", optional = true }

[dependencies.num-traits]
version = "0.2"
default-features = false

[dependencies.chrono] # date and time support for rust
version = "0.4"
default-features = false
optional = true

[dependencies.time]
version = "0.3.0-alpha-0"
default-features = false
optional = true
