[package]
name = "wa-proto-macro"
version = "0.1.1"
authors = ["Rail Khusnutdinov <mail@rail-ka.ru>"]
description = "macros for (de)serialization protocol for webassembly engines"
keywords = ["webassembly", "wasm", "serialization", "protocol", "procmacro"]
categories = ["encoding", "no-std", "wasm"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/libfunc/wa-proto/"
documentation = "https://docs.rs/wa-proto-macro/"
repository = "https://github.com/libfunc/wa-proto-macro/"
readme = "README.md"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1.0"
syn = { version = "1", features = ["full"] }
