[package]
name = "wa_proto"
version = "0.1.2"
authors = ["Rail Khusnutdinov <mail@rail-ka.ru>"]
description = "(de)serialization protocol for webassembly engines"
keywords = ["webassembly", "wasm", "wasi", "serialization", "protocol"]
categories = ["encoding", "no-std", "wasm"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/libfunc/wa-proto/"
documentation = "https://docs.rs/wa-proto/"
repository = "https://github.com/libfunc/wa-proto/"
readme = "../README.md"
edition = "2021"

[features]
default = ["std"]
std = [
    "map",
    "time/std",
]
hashmap = ["hashbrown"]
map = ["rustc-hash"]
no_std = ["hashbrown"] # rustc-hash optional for no_std

[dependencies]
hashbrown = { version = "0.12", optional = true }
rustc-hash = { version = "1.1", optional = true, default-features = false }

[dependencies.chrono] # date and time support for rust
version = "0.4"
default-features = false
optional = true

[dependencies.time]
version = "0.3.2"
default-features = false

[dependencies.wa_proto_macro]
version = "0.1.2"
# git = "ssh://git@github.com/libfunc/wa-proto-macro.git"
#path = "../wa-proto-macro"
 